[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]

[tool.pip-tools]
generate-hashes = true
no-annotate = true

[tool.ruff]
preview = true
line-length = 120

[tool.ruff.lint]
select = ["E", "W", "F"]

[project]
name = "ethstaker_kb"
description = "Ethstaker Knowledge Base"
readme = "README.md"
version = "1.6.1"
dependencies = [
  "babel==2.18.0",
  "backrefs==7.0",
  "cairocffi==1.7.1",
  "CairoSVG==2.7.1",
  "certifi==2026.6.17",
  "cffi==2.1.0",
  "charset-normalizer==3.4.9",
  "click==8.4.2",
  "colorama==0.4.6",
  "cssselect2==0.9.0",
  "defusedxml==0.7.1",
  "ghp-import==2.1.0",
  "hjson==3.1.0",
  "idna==3.18",
  "Jinja2==3.1.5",
  "Markdown==3.7",
  "MarkupSafe==3.0.2",
  "mergedeep==1.3.4",
  "mkdocs==1.6.1",
  "mkdocs-get-deps==0.2.2",
  "mkdocs-glightbox==0.5.2",
  "mkdocs-macros-plugin==1.5.0",
  "mkdocs-material==9.7.6",
  "mkdocs-material-extensions==1.3.1",
  "mkdocs-redirects==1.2.3",
  "mkdocs-static-i18n==1.3.1",
  "packaging==26.2",
  "paginate==0.5.7",
  "pathspec==1.1.1",
  "pillow==12.3.0",
  "platformdirs==4.10.0",
  "properdocs==1.6.7",
  "pycparser==3.0",
  "Pygments==2.19.1",
  "pymdown-extensions==11.0.1",
  "python-dateutil==2.9.0.post0",
  "PyYAML==6.0.2",
  "pyyaml==6.0.3",
  "regex==2026.6.28",
  "requests==2.34.2",
  "six==1.17.0",
  "super_collections==0.6.2",
  "termcolor==3.3.0",
  "tinycss2==1.5.1",
  "urllib3==2.7.0",
  "watchdog==6.0.0",
  "webencodings==0.5.1",
]
requires-python = ">=3.10,<4"

[project.urls]
"Homepage" = "https://docs.ethstaker.org"
